--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -63,18 +63,18 @@
 }
 
 @media (max-width: 800px) {
-  .nav-icon {
-    font-size: 30px;
+  /* .nav-icon {
+    font-size: 24px;
     line-height: 1;
-  }
+  } */
   .nav {
     justify-content: space-evenly;
     padding: 20px 20px;
   }
 
-  /* .nav-text {
+  .nav-text {
     display: none;
-  } */
+  }
 }
 
 @media (max-width: 500px) {
